Tests/ContributeWordPressTests/Helpers/Error/AssetDownloaderError.swift
import Foundation

internal enum AssetDownloaderError: EquatableError {
  case unreachableDestination
}
